--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password = rootpass
 #spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.format_sql = true
+
+#spring.servlet.multipart.max-file-size = 20MB
