data cleaning functionality sorta works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/cwrudatabite
 spring.datasource.username = root
-spring.datasource.password = rootpass
-#spring.datasource.password = dUnjgm*p
+#spring.datasource.password = rootpass
+spring.datasource.password = dUnjgm*p
 
 #spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.ddl-auto = none
